<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Win10安卓桌面</string>

    <string name="category_all">所有</string>
    <string name="category_music">音乐</string>
    <string name="category_video">视频</string>
    <string name="category_picture">图片</string>
    <string name="category_theme">主题</string>
    <string name="category_document">文档</string>
    <string name="category_zip">压缩包</string>
    <string name="category_apk">安装包</string>
    <string name="category_other">其它</string>
    <string name="category_favorite">收藏夹</string>

    <string name="favorite_photo">照片</string>
    <string name="favorite_sdcard">SD卡</string>
    <string name="favorite_root">根目录</string>
    <string name="favorite_screen_cap">MIUI截屏</string>
    <string name="favorite_ringtone">铃声</string>

    <string name="multi_select_title"><xliff:g id="number">%1$s</xliff:g> 个文件/夹</string>

    <string name="added_favorite">已加入收藏夹</string>
    <string name="removed_favorite">已从收藏夹移除</string>

    <string name="dialog_select_type">选择文件类型</string>
    <string name="dialog_type_text">文本</string>
    <string name="dialog_type_audio">音频</string>
    <string name="dialog_type_video">视频</string>
    <string name="dialog_type_image">图像</string>

    <string name="file_info_location">位置:</string>
    <string name="file_info_size">大小:</string>
    <string name="file_info_modified">时间:</string>
    <string name="file_info_canread">可读:</string>
    <string name="file_info_canwrite">可写:</string>
    <string name="file_info_ishidden">隐藏:</string>

    <string name="yes">是</string>
    <string name="no">否</string>

    <string name="file_size">%d 字节</string>

    <string name="menu_item_sort">排序</string>
    <string name="menu_item_sort_name">名称</string>
    <string name="menu_item_sort_size">大小</string>
    <string name="menu_item_sort_date">时间</string>
    <string name="menu_item_sort_type">类型</string>

    <string name="operation_create_folder_message">请输入文件夹名称</string>

    <string name="operation_create_folder">新建文件夹</string>

    <string name="menu_setting">设置</string>
    <string name="menu_exit">退出</string>

    <string name="operation_favorite">收藏</string>
    <string name="operation_unfavorite">取消收藏</string>
    <string name="operation_copy">复制</string>
    <string name="operation_copy_path">复制路径</string>
    <string name="operation_paste">粘贴</string>
    <string name="operation_move">剪切</string>
    <string name="operation_send">发送</string>
    <string name="operation_rename">重命名</string>
    <string name="operation_delete">删除</string>
    <string name="operation_info">详情</string>
    <string name="operation_cancel">取消</string>
    <string name="operation_refresh">刷新</string>
    <string name="operation_selectall">全选</string>
    <string name="operation_cancel_selectall">取消全选</string>
    <string name="operation_show_sys">显示点文件和隐藏文件</string>
    <string name="operation_hide_sys">隐藏点文件和隐藏文件</string>

    <string name="pref_primary_folder_summary">程序启动时显示的文件夹，当前路径为<xliff:g id="string">%1$s</xliff:g></string>
    <string name="pref_show_real_path_summary">在导航栏中显示真实路径</string>
    <string name="preference_title">常规设置</string>
    <string name="pref_primary_folder">主页文件夹</string>
    <string name="pref_read_root">读取根目录</string>
    <string name="pref_show_real_path">显示真实路径</string>
    <string name="default_primary_folder">/mnt/sdcard</string>
    <string name="sd_folder">SD卡</string>

    <string name="new_folder_name">新建文件夹</string>
    <string name="fail_to_create_folder">创建文件夹失败，文件夹已存在。</string>
    <string name="confirm">确定</string>
    <string name="operation_pasting">正在复制...</string>
    <string name="error_info_cant_send_folder">不能发送文件夹</string>
    <string name="operation_rename_message">请输入新名称</string>
    <string name="fail_to_rename">重命名失败失败，可能使用该名称的文件或文件夹已存在。</string>
    <string name="operation_delete_confirm_message">确认删除?</string>
    <string name="operation_deleting">正在删除...</string>
    <string name="operation_moving">正在移动...</string>
    <string name="cancel">取消</string>

    <string name="sd_card_size">SD卡:<xliff:g id="total_size">%1$s</xliff:g></string>
    <string name="sd_card_available">可用:<xliff:g id="available_size">%1$s</xliff:g></string>

    <string name="wifi_state">WiFi状态</string>
    <string name="instruction_pre">启动后可以从电脑端远程管理手机文件</string>
    <string name="instruction">请在“我的电脑”地址栏中输入：</string>
    <string name="notif_title">远程管理服务正在运行</string>
    <string name="no_wifi_hint">无WiFi网络,点击以查看WiFi设置</string>
    <string name="start_server">启动服务</string>
    <string name="stop_server">停止服务</string>
    <string name="no_wifi">无WiFi网络</string>
    <string name="storage_warning">外部存储不可用.</string>

    <string name="access_des">开启此功能，即可在Win10安卓桌面查看通知。</string>
</resources>
